# whey-baratein

./: .gitignore  whey-baratein.code-workspace
backend/: alembic.ini  main.py  pyproject.toml  run.py  test.db  test_complete_system.py  test_crud.db  whey_proteins.db
backend/alembic/versions/: 299606e5426d_manual_change_eaa_fields_from_int_to_float.py  4eddfa987e73_add_brand_relationship.py  dd3fe36b5ffa_add_reliability_image_url_and_brands.py
backend/src/: main.py
backend/src/api/: crud.py  routes.py  schemas.py
backend/src/application/usecase/: brand_usecases.py  product_usecases.py  whey_usecases.py
backend/src/database/: database.py  models.py
backend/src/domain/entity/: __init__.py  brand.py  product.py  user.py  whey.py
backend/src/domain/models/: brand.py  whey_protein.py
backend/src/domain/port/: product_repository.py  whey_ports.py
backend/src/entrypoints/api/: main.py
backend/src/entrypoints/api/exceptions/: auth_exceptions.py
backend/src/entrypoints/api/middleware/: exception_handler.py
backend/src/entrypoints/api/routes/: brands.py  users.py  whey.py
backend/src/infrastructure/: config.py
backend/src/infrastructure/persistence/: generic_sql_product_repository_adapter.py  sql_whey_repository_adapter.py
backend/src/infrastructure/persistence/schemas/: schemas.py
backend/src/infrastructure/security/: bcrypt_password_hasher.py
backend/test/e2e/: conftest.py  test_auth_routes.py  test_brand_routes.py  test_user_routes.py  test_whey_routes.py
backend/test/integration/: conftest.py
backend/tests/: test_api.py  test_crud.py  test_whey_protein_domain.py
backendv2/: .env.example  main.py  makefile  migrate.py  pyproject.toml
backendv2/src/application/dto/: whey_dto.py
backendv2/src/application/usecase/: brand_usecases.py  create_brand_usecase.py  create_user_usecase.py  create_whey_usecase.py  delete_brand_usecase.py  delete_user_usecase.py  delete_whey_usecase.py  get_brand_usecase.py  get_user_usecase.py  get_whey_usecase.py  product_usecases.py  update_brand_usecase.py  update_user_usecase.py  update_whey_usecase.py  user_usecases.py  whey_usecases.py
backendv2/src/domain/entity/: __init__.py  brand.py  product.py  user.py  whey.py
backendv2/src/domain/exception/: __init__.py  exceptions.py
backendv2/src/domain/port/: brand_ports.py  brand_repostory.py  generic_product_repository.py  password_hasher.py  product_repository.py  user_ports.py  user_repository.py  whey_ports.py
backendv2/src/entrypoints/api/: dependencies.py  main.py
backendv2/src/infrastructure/persistence/: generic_sql_product_repository_adapter.py  sql_brand_repository_adapter.py  sql_user_repository_adapter.py  sql_whey_repository_adapter.py
backendv2/src/infrastructure/security/: jwt_service.py
backendv2/test/application/usecase/: create_whey_test.py
backendv2/test/e2e/: README.md  conftest.py  test_brand_routes.py  test_whey_routes.py
backendv2/test/integration/: conftest.py
(+65 files in other folders)
