[project]
name = "backendv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.46",
    "starlette>=0.50.0",
    "testcontainers>=4.14.0",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]
