[project]
name = "backendv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "sqlalchemy>=2.0.46",
    "testcontainers>=4.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
